<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_rect_back"
        android:orientation="vertical">

        <TextView
            android:id="@+id/exerciseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/workout_activity_text_exerciseTitle"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="3"
                    android:textSize="16sp"
                    android:text="@string/workout_activity_text_exerciseName" />

                <TextView
                    android:id="@+id/exerciseName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="3"
                    android:textSize="16sp"
                    android:text="@string/workout_activity_text_exerciseDesc" />

                <TextView
                    android:id="@+id/exerciseDesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <!-- Rounds and Reps -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            android:orientation="horizontal">

            <!-- Rounds -->
            <LinearLayout
                android:id="@+id/layoutRounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/shape_rect">

                <TextView
                    android:id="@+id/textRounds"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/workout_activity_text_exerciseRounds"
                    android:gravity="center"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editRoundNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:inputType="number"/>

            </LinearLayout>

            <!-- Repetitions -->
            <LinearLayout
                android:id="@+id/layoutRepetitions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/shape_rect">

                <TextView
                    android:id="@+id/textRepetitions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/workout_activity_text_exerciseRepetitions"
                    android:gravity="center"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editRepetitionNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

        <!-- On-Time and Off-Time -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            android:orientation="horizontal">

            <!-- On-Time -->
            <LinearLayout
                android:id="@+id/layoutOnTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/shape_rect">

                <TextView
                    android:id="@+id/textOnTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/workout_activity_text_exerciseOnTime"
                    android:gravity="center"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editOnTimeNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:inputType="number" />

            </LinearLayout>

            <!-- Off-Time -->
            <LinearLayout
                android:id="@+id/layoutOffTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/shape_rect">

                <TextView
                    android:id="@+id/textOffTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/workout_activity_text_exerciseOffTime"
                    android:gravity="center"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editOffTimeNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

        <!-- Round duration and unit -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            android:orientation="horizontal">

            <!-- Round duration -->
            <LinearLayout
                android:id="@+id/layoutRoundDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/shape_rect">

                <TextView
                    android:id="@+id/textRoundDuration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/workout_activity_text_exerciseRoundDuration"
                    android:gravity="center"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editRoundDurationNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:inputType="number" />

            </LinearLayout>

            <!-- Unit -->
            <LinearLayout
                android:id="@+id/layoutUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/shape_rect">

                <TextView
                    android:id="@+id/textUnit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/workout_activity_text_exerciseUnit"
                    android:gravity="center"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editUnitNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>



</RelativeLayout>