<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.vollol.ourworkout.activities.CockpitActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>


   <LinearLayout
       android:id="@+id/linearLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNavManageWorkouts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/cockpit_activity_button_navManageWorkouts"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btnNavManageExercises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/cockpit_activity_button_navManageExercises"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnNavShowResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/cockpit_activity_button_navShowResults"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

        </LinearLayout>

       <!--androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recyclerViewDoWorkout"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:scrollbars="vertical"
           app:layout_behavior="@string/appbar_scrolling_view_behavior"/-->


   </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>