<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.vollol.ourworkout.activities.ManageWorkoutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/workoutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/manage_workout_activity_hint_workoutTitle"
                    android:inputType="text"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_marginRight="8dp"
                            android:text="@string/manage_workout_activity_text_chooseStrengthExercise"
                            android:gravity="center"
                            android:textSize="14sp" />

                        <Spinner
                            android:id="@+id/strengthExerciseSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="8dp"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnAddStrengthExercise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/manage_workout_activity_button_addExercise" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewStrengthExercise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:scrollbars="vertical"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="8dp"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_marginRight="8dp"
                            android:text="@string/manage_workout_activity_text_chooseEnduranceExercise"
                            android:gravity="center"
                            android:textSize="14sp" />

                        <Spinner
                            android:id="@+id/enduranceExerciseSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="8dp"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnAddEnduranceExercise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:text="@string/manage_workout_activity_button_addExercise" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewEnduranceExercise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:scrollbars="vertical"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


                </LinearLayout>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/manage_workout_activity_button_saveExercise"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>